hphp/test/zend/bad/ext/curl/tests/curl_escape.php.skipif
<?php 
if (!extension_loaded("curl")) exit("skip curl extension not loaded");
if (!function_exists("curl_escape")) exit("skip curl_escape doesn't exists");
$curl_version = curl_version();
if ($curl_version['version_number'] < 0x071502) {
	exit("skip: tests works only on curl >= 7.21.2");
}
?>